<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:padding="@dimen/_24sdp"
    android:clipToPadding="false"
    tools:context=".Activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_28sdp"
            android:textColor="@color/primary_color"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:scaleType="center"
                android:background="@drawable/background_image"
                app:riv_oval="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:textColor="@color/Secondary_text"
                android:textSize="@dimen/_11ssp"
                android:layout_gravity="center"/>

        </FrameLayout>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45ssp"
            android:background="@drawable/background_input"
            android:layout_marginTop="@dimen/_20ssp"
            android:hint="@string/name"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/primary_text"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45ssp"
            android:background="@drawable/background_input"
            android:layout_marginTop="@dimen/_20ssp"
            android:hint="@string/email"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/primary_text"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45ssp"
            android:background="@drawable/background_input"
            android:layout_marginTop="@dimen/_15ssp"
            android:hint="@string/password"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/primary_text"
            android:imeOptions="actionDone"/>

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45ssp"
            android:background="@drawable/background_input"
            android:layout_marginTop="@dimen/_15ssp"
            android:hint="@string/confirm_password"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="@dimen/_13sdp"
            android:textColor="@color/primary_text"
            android:imeOptions="actionDone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"/>

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20ssp"
            android:layout_marginTop="@dimen/_14ssp"
            android:text="@string/sign_in"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/Secondary_text"/>

    </LinearLayout>
</ScrollView>